updated to add scores and fix UI on mobile

--- a/dota/src/index.css
+++ b/dota/src/index.css
@@ -229,7 +229,7 @@ li {
   }
 
   .RadiantVictory {
-    margin-left: 7rem;
+    margin: 0rem 7rem;
     font-size: 2rem;
     text-align: center;
     font-weight: 800;
